# rgb_cloud_segmentation

./: README.md
rgb_cloud_segmentation/: CMakeLists.txt  rgb_cloud_segmentation.files  rgb_cloud_segmentation.includes
rgb_cloud_segmentation/include/rgb_cloud_segmentation/: dist_transform_segmenter.h  segmentation_estimation.h
rgb_cloud_segmentation/src/: dist_transform_segmenter.cpp  main.cpp  rgb_segment.cpp
